# vtui

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  release.yml  winget.yaml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
specs/001-esx-host-summary-view/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-esx-host-summary-view/contracts/: host-summary-ui.md
specs/002-vm-responsive-columns/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-vm-responsive-columns/checklists/: requirements.md
specs/002-vm-responsive-columns/contracts/: vm-responsive-columns-ui.md
src/: app.rs  body_pane.rs  config.rs  event.rs  hints.rs  history.rs  host_summary_ui.rs  inventory_path.rs  logging.rs  main.rs  operation_types.rs  perf_worker.rs  polling_policy.rs  resource_type.rs  search.rs  vm_action_ui.rs  vm_power_actions.rs  vm_summary_ui.rs
src/host_summary/: fetch.rs  mod.rs
src/ops/: handle.rs  mod.rs  supervisor.rs  types.rs
src/prop_browser/: browser.rs  json_to_tree.rs  mod.rs  prop_mgr.rs  prop_utils.rs
src/prop_browser/snapshots/: vtui__prop_browser__browser__snapshot_tests__property_browser_static_default_selection_snapshot.snap  vtui__prop_browser__browser__snapshot_tests__property_browser_static_expanded_config_snapshot.snap
src/resource_browser/: .resource_table.rs.pending-snap  cluster.rs  data_loaders.rs  datastore.rs  events.rs  formatting.rs  hints.rs  host.rs  indexed_cache.rs  mod.rs  network.rs  perf.rs  resource_mgr.rs  resource_table.rs  tabular_data.rs  task.rs  vm.rs  vm_layout.rs
src/resource_browser/snapshots/: vtui__resource_browser__resource_table__snapshot_tests__resource_table_empty_snapshot.snap  vtui__resource_browser__resource_table__snapshot_tests__resource_table_two_rows_snapshot.snap  vtui__resource_browser__resource_table__snapshot_tests__resource_table_with_filter_and_parent_snapshot.snap  vtui__resource_browser__resource_table__snapshot_tests__vm_responsive__vm_table_full_width_snapshot.snap  vtui__resource_browser__resource_table__snapshot_tests__vm_responsive__vm_table_name_only_snapshot.snap  vtui__resource_browser__resource_table__snapshot_tests__vm_responsive__vm_table_tier_status_power_snapshot.snap  vtui__resource_browser__resource_table__snapshot_tests__vm_responsive__vm_table_tier_with_id_snapshot.snap  vtui__resource_browser__resource_table__snapshot_tests__vm_responsive__vm_table_tier_with_os_snapshot.snap  vtui__resource_browser__resource_table__snapshot_tests__vm_responsive__vm_table_tier_with_used_space_snapshot.snap
src/snapshots/: vtui__host_summary_ui__tests__snapshot_loading.snap  vtui__host_summary_ui__tests__snapshot_ready_minimal.snap  vtui__host_summary_ui__tests__snapshot_rich_hardware.snap  vtui__host_summary_ui__tests__snapshot_vm_cap_banner.snap
src/vm_summary/: fetch.rs  format.rs  mod.rs
