[package]
name = "vtui"
version = "0.2.0"
edition = "2024"
description = "Terminal UI for browsing VMware vCenter inventory"
license = "Apache-2.0"
repository = "https://github.com/noclue/vtui"
homepage = "https://github.com/noclue/vtui"
readme = "README.md"
keywords = ["tui", "vmware", "vcenter", "vsphere", "terminal"]
categories = ["command-line-utilities"]
exclude = ["logs/", ".env", ".env.*"]

[dependencies]
anyhow = "1.0"
crossterm = {  version = "0.29", features = ["event-stream"]}
futures = "0.3"
tokio = {  version = "1.44", features = ["macros"]}
ratatui = {  version = "0.30" , features = ["crossterm"]}
vim_rs = "0.4"
chrono = "0.4"
tui-tree-widget = "0.24"
miniserde = "0.1"
log = "0.4"
simplelog = "0.12"
indexmap = "2.9"
thiserror = "2.0.12"
dotenvy = "0.15"

[profile.release]
lto = "fat"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
debug = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
