[package]
name = "vtui"
version = "0.2.5"
edition = "2024"
description = "Terminal UI for browsing VMware vSphere inventory"
license = "Apache-2.0"
repository = "https://github.com/noclue/vtui"
homepage = "https://github.com/noclue/vtui"
readme = "README.md"
keywords = ["tui", "vmware", "vsphere", "esxi", "terminal"]
categories = ["command-line-utilities"]
exclude = ["logs/", ".env", ".env.*"]

[dependencies]
anyhow = "1.0"
crossterm = {  version = "0.29", features = ["event-stream"]}
futures = "0.3"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "sync", "time"] }
ratatui = {  version = "0.30" , features = ["crossterm"]}
vim_rs = { version = "0.4.3", features = ["xml", "vcsim_compat"], path = "../vim-rs/vim_rs"}
chrono = "0.4"
tui-tree-widget = "0.24"
miniserde = "0.1"
log = "0.4"
flexi_logger = { version = "0.31", features = ["compress"] }
indexmap = "2.9"
thiserror = "2.0.12"
dotenvy = "0.15"
rpassword = "7"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
insta = "1"
tempfile = "3"
regex = "1"

[profile.release]
lto = "fat"
strip = true
opt-level = "z"
codegen-units = 1
panic = "abort"
debug = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
